@@ -57,10 +57,16 @@ if (ORTHANC_FRAMEWORK_SOURCE STREQUAL "system")
   
   link_libraries(${ORTHANC_FRAMEWORK_LIBRARIES})
 
+  set(USE_SYSTEM_GOOGLE_TEST ON CACHE BOOL "Use the system version of Google Test")
+  set(USE_GOOGLE_TEST_DEBIAN_PACKAGE OFF CACHE BOOL "Use the sources of Google Test shipped with libgtest-dev (Debian only)")
+  mark_as_advanced(USE_GOOGLE_TEST_DEBIAN_PACKAGE)
+  include(${CMAKE_SOURCE_DIR}/Resources/Orthanc/CMake/GoogleTestConfiguration.cmake)
+
 else()
   include(${ORTHANC_FRAMEWORK_ROOT}/../Resources/CMake/OrthancFrameworkParameters.cmake)
 
   set(ENABLE_LOCALE OFF)           # Disable support for locales (notably in Boost)
+  set(ENABLE_GOOGLE_TEST ON)
   set(ENABLE_MODULE_IMAGES OFF)
   set(ENABLE_MODULE_JOBS OFF)
   set(ENABLE_MODULE_DICOM OFF)
@@ -84,8 +90,6 @@ if (STATIC_BUILD OR NOT USE_SYSTEM_ORTHANC_SDK)
     message(FATAL_ERROR "Unsupported version of the Orthanc plugin SDK: ${ORTHANC_SDK_VERSION}")
   endif()
 
-
-include_directories(${CMAKE_SOURCE_DIR}/Resources/Orthanc//Sdk-1.3.1)
 else ()
   CHECK_INCLUDE_FILE_CXX(orthanc/OrthancCPlugin.h HAVE_ORTHANC_H)
   if (NOT HAVE_ORTHANC_H)
@@ -128,12 +132,21 @@ set(ADDITIONAL_RESOURCES
   DEFAULT_CONFIGURATION  ${CMAKE_SOURCE_DIR}/Plugin/DefaultConfiguration.json
   )
 
-  EmbedResources(
+EmbedResources(
   --no-upcase-check
   ${ADDITIONAL_RESOURCES}
   )
 
-add_library(OrthancAuthorization SHARED
+# As the embedded resources are shared by both the "UnitTests" and the
+# "OrthancAuthorization" targets, avoid race conditions in the code
+# generation by adding a target between them
+add_custom_target(
+  AutogeneratedTarget
+  DEPENDS 
+  ${AUTOGENERATED_SOURCES}
+  )
+
+set(PLUGIN_SOURCES
   ${CMAKE_SOURCE_DIR}/Plugin/AccessedResource.cpp
   ${CMAKE_SOURCE_DIR}/Plugin/AssociativeArray.cpp
   ${CMAKE_SOURCE_DIR}/Plugin/AuthorizationParserBase.cpp
@@ -150,8 +163,14 @@ add_library(OrthancAuthorization SHARED
   ${CMAKE_SOURCE_DIR}/Resources/Orthanc/Plugins/OrthancPluginCppWrapper.cpp
   ${ORTHANC_CORE_SOURCES}
   ${AUTOGENERATED_SOURCES}
-  )
+)
 
+
+add_library(OrthancAuthorization SHARED
+  ${PLUGIN_SOURCES}
+)
+
+add_dependencies(OrthancAuthorization AutogeneratedTarget)
 
 message("Setting the version of the plugin to ${ORTHANC_PLUGIN_VERSION}")
 add_definitions(-DORTHANC_PLUGIN_VERSION="${ORTHANC_PLUGIN_VERSION}")
@@ -164,4 +183,25 @@ install(
   TARGETS OrthancAuthorization
   RUNTIME DESTINATION lib    # Destination for Windows
   LIBRARY DESTINATION share/orthanc/plugins    # Destination for Linux
+  )
+
+add_executable(UnitTests
+  ${PLUGIN_SOURCES}
+  ${ORTHANC_CORE_SOURCES}
+  ${GOOGLE_TEST_SOURCES}
+  UnitTestsSources/UnitTestsMain.cpp
+  )
+
+# add_dependencies(UnitTests AutogeneratedTarget)
+
+target_include_directories(UnitTests PUBLIC ${ORTHANC_FRAMEWORK_ROOT})
+target_compile_definitions(UnitTests PUBLIC
+  -DHAS_ORTHANC_EXCEPTION=1
+  -DORTHANC_ENABLE_LOGGING_PLUGIN=1
+  -DBUILD_UNIT_TESTS=1
+  )
+
+target_link_libraries(UnitTests
+  ${GOOGLE_TEST_LIBRARIES}
+  # ${AUTOGENERATED_SOURCES}
   )
